Completed hw11-cache